--- a/src/scss/studySet.scss
+++ b/src/scss/studySet.scss
@@ -31,6 +31,7 @@
         &-label {
             color: $black;
             margin-bottom: 5px;
+            overflow-wrap: break-word;
         }
         &-hint {
             display: block;
@@ -45,6 +46,7 @@
         color: $white;
         margin-top: 10px;
         animation: append 1.5s forwards;
+        overflow-wrap: break-word;
     }
     &__button {
         margin-top: 10px;
